[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/fonts/IBM_Plex_Sans/IBMPlexSans-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/fonts/IBM_Plex_Sans/IBMPlexSans-Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/images/bg.png" type="Texture" id=3]
[ext_resource path="res://Src/Scenes/DayResult/DayResult.gd" type="Script" id=4]
[ext_resource path="res://Resources/Audio/SFX/click.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.992157, 0.92549, 0.815686, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.956863, 0.882353, 0.760784, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.341176, 0.145098, 0.231373, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.584314, 0.211765, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.721569, 0.494118, 0.411765, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=9]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="DayResult" type="Control"]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.419608, 0.811765, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -160.0
margin_right = 176.5
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Stats"]
margin_right = 353.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 1 )
text = "Day Results
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collected" type="Label" parent="Stats"]
margin_top = 171.0
margin_right = 353.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 2 )
text = "Collected: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Stats/Collected"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalStored" type="Label" parent="Stats"]
margin_top = 225.0
margin_right = 353.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
text = "Total Stored: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Stats/TotalStored"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EatAcornDialog" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -505.0
margin_top = -130.0
margin_right = 505.0
margin_bottom = -5.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EatAcornText" type="Label" parent="EatAcornDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -447.0
margin_top = -58.5
margin_right = 447.0
margin_bottom = 4.5
custom_fonts/font = SubResource( 4 )
text = "You need to eat to be active tomorrow. Eat 1 Acorn for Full Running Speed ?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="EatAcornDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -70.0
margin_right = 100.0
margin_bottom = -10.0
rect_min_size = Vector2( 200, 60 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="EatAcornDialog/Buttons"]
margin_right = 92.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="EatAcornDialog/Buttons"]
margin_left = 107.0
margin_right = 200.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueDialog" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -505.0
margin_top = -130.0
margin_right = 505.0
margin_bottom = -5.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="ContinueDialog"]
margin_left = 405.0
margin_top = 55.0
margin_right = 605.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 9 )

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="EatAcornDialog/Buttons/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="EatAcornDialog/Buttons/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="ContinueDialog/ContinueButton" to="." method="_on_ContinueButton_pressed"]
